--- a/WebsitePro-master/partials/_header.scss
+++ b/WebsitePro-master/partials/_header.scss
@@ -5,16 +5,16 @@
     left: 0;
     right: 0;
     z-index: 1000;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.8);
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
-    padding: 1.5rem 9%;
+    padding:1.5rem 9%;
 
-    &:hover {
-        background: rgba(0, 0, 0, 0.9);
-    }
+    // &:hover {
+    //     background: rgba(0, 0, 0, 0.9);
+    // }
 
     .navbar li {
         font-size: 1.7rem;
@@ -24,7 +24,8 @@
         margin: 0 1rem;
 
         a {
-            color: $gold-color;
+            color: #f5f5f7;
+            padding: 0 2.5rem;
             text-decoration: none;
 
             &:hover {
@@ -39,14 +40,15 @@
     }
 
     .nav-items {
-        padding: 0.2rem;
+        padding: 0 1.5rem;
+    
     }
 
     .logo {
         padding: 0.2rem;
         font-size: 2.5rem;
         font-weight: 700;
-        color: $gold-color;
+        color: #f5f5f7;
         text-decoration: none;
 
         &:hover {
