--- a/WebsitePro-master/styles/style.css
+++ b/WebsitePro-master/styles/style.css
@@ -7,15 +7,12 @@
   left: 0;
   right: 0;
   z-index: 1000;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.8);
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   padding: 1.5rem 9%;
-}
-.header:hover {
-  background: rgba(0, 0, 0, 0.9);
 }
 .header .navbar li {
   font-size: 1.7rem;
@@ -25,7 +22,8 @@
   margin: 0 1rem;
 }
 .header .navbar li a {
-  color: rgb(212, 175, 55);
+  color: #f5f5f7;
+  padding: 0 2.5rem;
   text-decoration: none;
 }
 .header .navbar li a:hover {
@@ -36,13 +34,13 @@
   padding-left: 20px;
 }
 .header .nav-items {
-  padding: 0.2rem;
+  padding: 0 1.5rem;
 }
 .header .logo {
   padding: 0.2rem;
   font-size: 2.5rem;
   font-weight: 700;
-  color: rgb(212, 175, 55);
+  color: #f5f5f7;
   text-decoration: none;
 }
 .header .logo:hover {
