Home page changing

--- a/WebsitePro-master/partials/_headings.scss
+++ b/WebsitePro-master/partials/_headings.scss
@@ -1,6 +1,6 @@
 .home {
   margin-top: 3rem;
-  background: url(/images/Home_images/h1.png) no-repeat;
+  background: url(/images/home_images/h1.png) no-repeat;
   background-size: cover;
   background-position: center;
   display: flex;
@@ -145,8 +145,8 @@
 }
 
 // About home img
-.home_about {
-  background: url(/images/p3.webp) no-repeat;
+.about {
+  background: url(/images/home_images/h2.png) no-repeat;
   background-size: cover;
   background-position: center;
   display: flex;
