--- a/WebsitePro-master/styles/style.css
+++ b/WebsitePro-master/styles/style.css
@@ -368,7 +368,7 @@
 .home .content {
   min-width: 30vh;
   display: flex;
-  margin-top: -40rem;
+  margin-top: -50rem;
   flex-direction: row;
   justify-content: center;
   align-items: center;
@@ -376,11 +376,11 @@
 }
 .home .content ul li {
   list-style: none;
-  display: inline-flex;
+  display: inline;
 }
 .home .content ul li a {
-  padding: 2rem;
-  margin-bottom: 3rem;
+  padding: 1.5rem;
+  margin-bottom: 5rem;
   font-size: 2rem;
   color: #06c;
   letter-spacing: inherit;
@@ -488,20 +488,72 @@
   line-height: 1;
 }
 
-.about {
+.ipad {
   background: url(/images/home_images/h2.png) no-repeat;
   background-size: cover;
   background-position: center;
   display: flex;
-  min-height: 80vh;
+  min-height: 60vh;
   align-items: center;
   justify-content: center;
 }
+.ipad .content {
+  margin-top: 150px;
+  padding-left: 365px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.ipad .content ul li {
+  list-style: none;
+  display: inline;
+}
+.ipad .content ul li a {
+  padding: 1.5rem;
+  margin-bottom: 5rem;
+  font-size: 2rem;
+  color: #06c;
+  letter-spacing: inherit;
+}
 @media (min-width: 297.98px) and (max-width: 767.98px) {
-  .about {
+  .ipad {
     padding: 3rem 1rem;
   }
-  .about .s1 {
+  .ipad .s1 {
+    font-size: 5vw;
+    margin: 3rem;
+  }
+}
+
+.presentcard {
+  background: url(/images/home_images/h3.png) no-repeat;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  min-height: 60vh;
+  align-items: center;
+  justify-content: center;
+}
+.presentcard .content {
+  margin-top: 20vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.presentcard .content ul li {
+  list-style: none;
+  display: inline;
+}
+.presentcard .content ul li a {
+  font-size: 2rem;
+  color: #06c;
+  letter-spacing: inherit;
+}
+@media (min-width: 297.98px) and (max-width: 767.98px) {
+  .presentcard {
+    padding: 3rem 1rem;
+  }
+  .presentcard .s1 {
     font-size: 5vw;
     margin: 3rem;
   }
