--- a/Apple_store/website/partials/_headings.scss
+++ b/Apple_store/website/partials/_headings.scss
@@ -196,7 +196,7 @@
   justify-content: center;
 
   .content {
-    margin-top: 20vw;
+    margin-top: 30rem;
     display: flex;
     flex-direction: column;
     align-items: center;
