🚀 starting apple store

--- a/Apple_store/partials/_headings.scss
+++ b/Apple_store/partials/_headings.scss
@@ -1,6 +1,6 @@
 .home {
   margin-top: 3rem;
-  background: url(/images/home_images/h1.png) no-repeat;
+  background: url(/apple_store/images/home_images/h1.png) no-repeat;
   background-size: cover;
   background-position: center;
   display: flex;
@@ -146,7 +146,7 @@
 
 // About Ipad
 .ipad {
-  background: url(/images/home_images/h2.png) no-repeat;
+  background: url(/apple_store/images/home_images/h2.png) no-repeat;
   background-size: cover;
   background-position: center;
   display: flex;
@@ -187,7 +187,7 @@
 
 // About presentcard 
 .presentcard {
-  background: url(/images/home_images/h3.png) no-repeat;
+  background: url(/apple_store/images/home_images/h3.png) no-repeat;
   background-size: cover;
   background-position: center;
   display: flex;
