--- a/Apple_store/styles/style.css
+++ b/Apple_store/styles/style.css
@@ -357,7 +357,7 @@
 
 .home {
   margin-top: 3rem;
-  background: url(/images/home_images/h1.png) no-repeat;
+  background: url(/apple_store/images/home_images/h1.png) no-repeat;
   background-size: cover;
   background-position: center;
   display: flex;
@@ -489,7 +489,7 @@
 }
 
 .ipad {
-  background: url(/images/home_images/h2.png) no-repeat;
+  background: url(/apple_store/images/home_images/h2.png) no-repeat;
   background-size: cover;
   background-position: center;
   display: flex;
@@ -526,7 +526,7 @@
 }
 
 .presentcard {
-  background: url(/images/home_images/h3.png) no-repeat;
+  background: url(/apple_store/images/home_images/h3.png) no-repeat;
   background-size: cover;
   background-position: center;
   display: flex;
