--- a/Apple_store/styles/style.css
+++ b/Apple_store/styles/style.css
@@ -713,29 +713,40 @@ textarea {
 }
 
 .gallery .box-container {
-  -moz-columns: 3 25rem;
-       columns: 3 25rem;
+  -moz-columns: 2 40rem;
+       columns: 2 40rem;
   -moz-column-gap: 1.5rem;
        column-gap: 1.5rem;
 }
 .gallery .box-container .box-gallery {
-  margin-bottom: 1rem;
+  margin-bottom: 0.8rem;
   -moz-column-break-inside: avoid;
        break-inside: avoid;
 }
 .gallery .box-container .box-gallery img {
   width: 100%;
-  border-radius: 0.5rem;
-  margin-bottom: 1rem;
-}
-.gallery .box-container .box-gallery img:hover {
-  transform: scale(1.1);
+  margin-bottom: 0.8rem;
 }
 
 section {
-  padding: 3rem 9%;
-  font-size: 1.5rem;
+  text-align: center;
+  padding: 1rem 1rem;
+  font-size: 1rem;
   font-weight: 400;
+}
+section .box-gallery ul li {
+  position: relative;
+  top: 12rem;
+  left: 0%;
+  bottom: 0%;
+  list-style: none;
+  display: inline;
+}
+section .box-gallery ul li a {
+  padding: 1rem;
+  font-size: 1.3rem;
+  color: #06c;
+  letter-spacing: inherit;
 }
 
 .border {
