--- a/Apple_store/styles/style.css
+++ b/Apple_store/styles/style.css
@@ -38,7 +38,7 @@
 }
 .header .logo {
   padding: 0.2rem;
-  font-size: 2.5rem;
+  font-size: 3rem;
   font-weight: 700;
   color: #f5f5f7;
   text-decoration: none;
@@ -49,7 +49,7 @@
 
 #menu-btn {
   font-size: 2.5rem;
-  color: rgb(212, 175, 55);
+  color: #f5f5f7;
   display: none;
   cursor: pointer;
 }
@@ -62,9 +62,9 @@
   font-weight: 500;
   padding: 0.5rem 1rem;
   border-radius: 8px;
-  border: 2px solid rgb(212, 175, 55);
+  border: 2px solid #f5f5f7;
   cursor: pointer;
-  color: rgb(212, 175, 55);
+  color: #f5f5f7;
 }
 .nav-item-booking a:hover {
   color: white;
@@ -872,6 +872,8 @@ body {
     display: inline-block;
   }
   .header {
+    display: flex;
+    justify-content: space-between;
     padding: 2rem;
   }
 }
@@ -886,9 +888,10 @@ body {
     top: 99%;
     left: 0;
     right: 0;
-    background: rgba(0, 0, 0, 0.3);
+    background: rgba(0, 0, 0, 0.9);
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
             clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    height: 100vh;
   }
   .header .navbar.active {
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
@@ -897,7 +900,8 @@ body {
     padding: 0 30px;
   }
   .header .navbar li {
-    margin: 2rem;
+    margin: 4rem;
+    border-bottom: 0.1rem solid white;
     font-size: 2rem;
     display: block;
   }
