--- a/Apple_store/styles/style.scss
+++ b/Apple_store/styles/style.scss
@@ -97,6 +97,8 @@ body {
     display: inline-block;
   }
   .header {
+    display: flex;
+    justify-content: space-between;
     padding: 2rem;
     .logo {
       @media (min-width: 297.98px) and (max-width: 378.98px) {
@@ -109,8 +111,9 @@ body {
       top: 99%;
       left: 0;
       right: 0;
-      background: rgba(0, 0, 0, 0.3);
+      background: rgba(0, 0, 0, 0.9);
       clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+      height: 100vh;
 
       &.active {
         clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
@@ -118,7 +121,9 @@ body {
         padding: 0 30px;
       }
       li {
-        margin: 2rem;
+        margin: 4rem;
+        border-bottom: .1rem solid white;
+        
         font-size: 2rem;
         display: block;
 
