--- a/Apple_store/partials/_footer.scss
+++ b/Apple_store/partials/_footer.scss
@@ -1,127 +1,87 @@
 // Footer 
 .footer {
-    background: white;
-
+    padding: 0;
+    background: #f5f5f7;
+    font-size: 1.3rem;
+    .footer-content{
+        max-width: 980px; width: 95vw;
+        margin: 0 auto;
+    }
+    ul{
+        list-style: none;
+    }
     .box-container {
-        @include grid(25rem);
-
+        display: flex;
+        justify-content: space-between;
+        padding-bottom: 5rem;
         .box {
-            padding: 1rem 1rem;
-
-            .logo {
-                font-size: 3rem;
-                font-weight: 600;
-                padding-top: 1rem;
-                padding-bottom: 1rem;
-                color: $gold-color;
-            }
-            @media (min-width: 297.98px) and (max-width: 1046.98px) {
-                .logo {
-                        font-size: 2.3rem;
-                        font-weight: 600;
-                        padding-top: 1rem;
-                        padding-bottom: 1rem;
-                        color: $gold-color;
-                }
-            }
-            
             h3 {
-                font-size: 2.2rem;
-                color: $gold-color;
+                color: $black;
                 padding: 1rem 0;
+                font-size: 1.3rem;
             }
-
+            ul{
+                li{
+                    margin-bottom: 1rem; 
+                }
+                a{
+                    color: $black;
+                    &:hover{
+                        border-bottom: 1px solid $black;
+                        
+                    } 
+                }
+            } 
+        }
+    }
+    .footer-shop{
+        width: 100%;
+        
+        a{
+            color: #0066CC;
+            &:hover{
+                border-bottom: 1px solid #0066CC;
+                
+            }
+        }
+    }
+    .divider{
+        padding-top: 1rem;
+        border-bottom: 1px solid rgb(182, 182, 182);
+    }
+    .legal{
+        padding-bottom: 2rem;
+        .copyrights {
+            opacity: 0.9;
+            font-size: 1.3rem;
+            font-weight: 500;
+            padding: 1rem 0;
             p {
-                font-size: 1.5rem;
-                font-weight: 600;
-                color: $brown;
-                padding: 1rem 0;
-                line-height: 2;
-
-                i {
-                    font-size: 2.5rem;
-                    padding-right: 1rem;
-                    color: $brown;
-                }
+                color: rgb(71, 71, 71);
             }
-
-            .share {
-                padding-top: 1rem;
-
-                a {
-                    height: 4.5rem;
-                    width: 4.5rem;
-                    line-height: 4rem;
-                    font-size: 3rem;
-                    color: $brown;
-                    margin-right: 0.5rem;
-
-                    &:hover {
-                        color: $gold-color;
-                    }
-                }
+        }
+        ul{
+            display: flex;
+            flex-wrap: wrap;
+            gap: 1rem;
+            font-weight: 500;
+            li{
+                padding-right: 1rem;
+                border-right: 1px solid rgb(182, 182, 182);
             }
-
-            .links {
-                font-size: 1.5rem;
-                font-weight: 600;
-                color: $brown;
-                padding: 1rem 0;
-                display: block;
-
-                &:hover {
-                    color: $gold-color;
-
-                    i {
-                        padding-right: 2rem;
-                    }
-
-                    i {
-                        padding-right: 1rem;
-                        color: $gold-color;
-                    }
-                }
+            a{
+                color: $black;
             }
-
-            form .email {
-                widows: 100%;
-                border: 1px solid $brown;
-                border-radius: 1rem;
-                background: none;
-                font-size: 2rem;
-                color: $gold-color;
-                margin-bottom: 1rem;
-                padding: 0.5rem 2rem;
-            }
-
-            .btn-subscribe {
-                font-size: 2rem;
-                font-weight: 400;
-                padding: 0.5rem 2rem;
-                border-radius: 1rem;
-                background-color: rgba(0, 0, 0, 0.5);
-                border: 2px solid $gold-color;
-                cursor: pointer;
-                color: $gold-color;
-
-                &:hover {
-                    color: white;
-                    border: 2px solid white;
-                }
+            li:last-child{
+                border-right: none;
             }
         }
     }
 }
-
-.copyrights {
-    background: $black-bg;
-    opacity: 0.7;
-    text-align: center;
-    font-size: 1.2rem;
-    font-weight: 500;
-    padding: 1rem 2rem;
-
-    p {
-        color: white;
+@media (max-width: 840px) {
+    .box-container{
+        //skapa layout för mobile
+        background-color: aqua;
     }
+    
 }
