--- a/Apple_store/partials/_footer.scss
+++ b/Apple_store/partials/_footer.scss
@@ -1,5 +1,5 @@
 // Footer 
-.footer {
+footer {
     padding: 0;
     background: #f5f5f7;
     font-size: 1.3rem;
@@ -71,6 +71,10 @@
             }
             a{
                 color: $black;
+                &:hover{
+                    border-bottom: 1px solid #0066CC;
+                    
+                }
             }
             li:last-child{
                 border-right: none;
