--- a/Apple_store/partials/_headings.scss
+++ b/Apple_store/partials/_headings.scss
@@ -223,7 +223,7 @@
   }
 }
 
-// Luxury home img
+// Mac home img
 
 .home_luxury {
   background: url(/images/p1.jpeg) no-repeat;
@@ -239,7 +239,7 @@
   }
 }
 
-// Gallery home img
+// iPad home img
 
 .home_gallery {
   background: url(/images/p5.jpeg) no-repeat;
@@ -251,7 +251,7 @@
   justify-content: center;
 }
 
-// Reference home img
+// Iphone home img
 
 .home_reference {
   background: url(/images/p7.jpeg) no-repeat;
