--- a/Apple_store/styles/style.scss
+++ b/Apple_store/styles/style.scss
@@ -38,7 +38,7 @@ body {
 
 @media (min-width: 992.98px) {
   .destination .box-container {
-    @include grid(27rem);
+    // @include grid(27rem);
   }
   html {
     font-size: 55%;
