--- a/Apple_store/partials/_headings.scss
+++ b/Apple_store/partials/_headings.scss
@@ -30,46 +30,6 @@
       }
     }
 
-    @media (min-width: 297.98px) and (max-width: 767.98px) {
-      padding: 3rem 1rem;
-      .form {
-        #email-s {
-          display: block;
-          font-size: 1.5rem;
-          font-weight: 600;
-          opacity: 0.5;
-          border-radius: 5px;
-          padding: 0.9rem 1rem;
-          margin-bottom: 1.5rem;
-          width: 50vw;
-        }
-
-        #party {
-          display: block;
-          font-size: 1.5rem;
-          font-weight: 600;
-          opacity: 0.5;
-          border-radius: 5px;
-          padding: 0.9rem 1rem;
-          width: 50vw;
-        }
-
-        input[type='text'],
-        select,
-        textarea {
-          display: flex;
-          color: $brown;
-          font-weight: 900;
-          opacity: 0.6;
-          width: 50vw;
-          padding: 1rem;
-          border-radius: 0.6rem;
-          margin-top: 1.5rem;
-          margin-bottom: 1.5rem;
-        }
-      }
-    }
-
     .logo {
       padding: 0.2rem;
       font-size: 5rem;
@@ -84,62 +44,6 @@
 
     .headerlogo {
       font-family: $fonts-logo;
-    }
-
-    span {
-      font-weight: bold;
-      color: transparent;
-      -webkit-text-stroke: 0.1rem white;
-      font-size: 3vw;
-      display: block;
-    }
-
-    .s1 {
-      font-family: 'Bilbo Swash Caps', 'Montserrat', 'Poppins', sans-serif;
-      font-size: 6vw;
-      color: white;
-      line-break: normal;
-    }
-
-    #email {
-      display: block;
-      font-size: 1.5rem;
-      font-weight: 600;
-      opacity: 0.5;
-      border-radius: 5px;
-      padding: 0.9rem 1rem;
-      margin-bottom: 1.5rem;
-      width: 33vw;
-    }
-
-    #email-s {
-      display: block;
-      font-size: 1.5rem;
-      font-weight: 600;
-      opacity: 0.5;
-      border-radius: 5px;
-      padding: 0.9rem 1rem;
-      margin-bottom: 1.5rem;
-      width: 33vw;
-    }
-
-    #party {
-      display: block;
-      font-size: 1.5rem;
-      font-weight: 600;
-      opacity: 0.5;
-      border-radius: 5px;
-      padding: 0.9rem 1rem;
-      width: 33vw;
-    }
-
-    .p1 {
-      max-width: 60rem;
-      margin: 2rem auto;
-      font-size: 2rem;
-      font-weight: 700;
-      color: whitesmoke;
-      line-height: 1;
     }
   }
 }
@@ -225,8 +129,8 @@
 
 // Mac home img
 
-.home_luxury {
-  background: url(/images/p1.jpeg) no-repeat;
+.home_mac {
+  background: url(/Apple_store/images/mac_images/m1.png) no-repeat;
   background-size: cover;
   background-position: center;
   display: flex;
@@ -234,10 +138,73 @@
   align-items: center;
   justify-content: center;
 
+  .content{
+    min-width: 30vh;
+    display: flex;
+    margin-top: -35rem;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 3rem;
+
+    ul li {
+      list-style: none;
+      display: inline;
+
+      a {
+        padding: 1.5rem;
+        margin-bottom: 5rem;
+        font-size: 2rem;
+        color: #06c;
+        letter-spacing: inherit;
+      }
+    }
+  }
+
   @media (min-width: 297.98px) and (max-width: 767.98px) {
     padding: 3rem 10rem;
   }
 }
+
+// MacBook image
+
+.macBook_pro {
+  background: url(/Apple_store/images/mac_images/m2.png) no-repeat;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  min-height: 60vh;
+  align-items: center;
+  justify-content: center;
+
+  .content {
+    margin-top: -5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    ul li {
+      list-style: none;
+      display: inline;
+
+      a {
+
+        font-size: 2rem;
+        color: #06c;
+        letter-spacing: inherit;
+      }
+    }
+  }
+
+  @media (min-width: 297.98px) and (max-width: 767.98px) {
+    padding: 3rem 1rem;
+    .s1 {
+      font-size: 5vw;
+      margin: 3rem;
+    }
+  }
+}
+
 
 // iPad home img
 
