--- a/Apple_store/partials/_footer.scss
+++ b/Apple_store/partials/_footer.scss
@@ -83,10 +83,10 @@ footer {
         }
     }
 }
-@media (max-width: 840px) {
-    .box-container{
-        //skapa layout för mobile
-        background-color: aqua;
-    }
+// @media (max-width: 840px) {
+//     .box-container{
+//         //skapa layout för mobile
+//         background-color: aqua;
+//     }
     
-}
+// }
