--- a/Apple_store/styles/style.scss
+++ b/Apple_store/styles/style.scss
@@ -37,9 +37,9 @@ body {
 }
 
 @media (min-width: 992.98px) {
-  .destination .box-container {
-    // @include grid(27rem);
-  }
+  // .destination .box-container {
+  //   // @include grid(27rem);
+  // }
   html {
     font-size: 55%;
   }
