--- a/Apple_store/partials/_small-stylings.scss
+++ b/Apple_store/partials/_small-stylings.scss
@@ -25,8 +25,9 @@ section {
 }
 // Borders
 .border {
-  margin: 0 30vw 3rem;
-  border-bottom: 2px solid $gold-color;
+  padding-top: 5rem;
+  border-bottom: 1px solid #d2d2d7;
+  width: 80%;
 }
 
 .border_two {
