--- a/Apple_store/styles/style.css
+++ b/Apple_store/styles/style.css
@@ -149,11 +149,6 @@ footer .legal ul li:last-child {
   border-right: none;
 }
 
-@media (max-width: 840px) {
-  .box-container {
-    background-color: aqua;
-  }
-}
 .about {
   display: flex;
   align-items: center;
@@ -367,44 +362,82 @@ img {
   color: rgb(55, 20, 1);
 }
 
-.destination .box-container {
+#products {
+  min-height: 150vh;
+}
+
+.products .box-container {
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
 }
-.destination .box-container .box {
-  width: 200px;
-  height: 300px;
+.products .box-container .content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-.destination .box-container .box .image {
-  padding: 0 4rem;
-  height: 20rem;
-  width: 250px;
-  height: 200px;
+.products .box-container .content .box {
+  padding-top: 3rem;
 }
-.destination .box-container .box .image img {
-  height: 100%;
-  width: 100%;
-}
-.destination .box-container .box .content {
-  padding: 2rem;
-  text-align: center;
-}
-.destination .box-container .box .content h3 {
-  font-size: 2rem;
-  color: rgb(55, 20, 1);
-}
-.destination .box-container .box .content p {
+.products .box-container .content h3 {
+  font-size: 3rem;
+  font-weight: 500;
   padding-bottom: 1rem;
 }
-.destination .box-container .box .content a {
-  color: rgb(55, 20, 1);
-  font-weight: 700;
-  text-decoration: overline;
+.products .box-container .content span {
+  font-size: 1.4rem;
 }
-.destination .box-container .box .content a:hover {
-  color: rgb(212, 175, 55);
+.products .box-container .content .chip {
+  padding-bottom: 3rem;
+}
+.products .box-container .content .price {
+  margin: 1rem 0 1rem;
+  font-size: 1.8rem;
+}
+.products .box-container .content .buy {
+  width: 4vw;
+  font-size: 12px;
+  line-height: 1.33337;
+  font-weight: 400;
+  padding: 5px 2px;
+  cursor: pointer;
+  display: inline-block;
+  text-align: center;
+  border-radius: 980px;
+  background: #0071e3;
+  color: #fff;
+}
+.products .box-container .content .link {
+  padding: 2rem 0 4rem;
+  font-size: 1.5rem;
+  list-style: none;
+  color: #0071e3;
+  border-bottom: 1px solid #d2d2d7;
+  width: 80%;
+}
+.products .box-container .content .link .fa-chevron-right {
+  font-size: 1rem;
+}
+.products .box-container .content .icon {
+  padding-top: 5rem;
+  font-size: 2.5rem;
+  font-weight: 500;
+}
+.products .box-container .box {
+  min-height: 80vh;
+  width: 220px;
+  height: 140px;
+}
+.products .box-container .box .image {
+  padding: 0 4rem;
+  width: 250px;
+  height: 190px;
+}
+.products .box-container .box .image img {
+  height: 100%;
+  width: 100%;
 }
 
 .home {
@@ -769,8 +802,9 @@ section .box-gallery ul li a {
 }
 
 .border {
-  margin: 0 30vw 3rem;
-  border-bottom: 2px solid rgb(212, 175, 55);
+  padding-top: 5rem;
+  border-bottom: 1px solid #d2d2d7;
+  width: 80%;
 }
 
 .border_two {
