--- a/Apple_store/styles/style.css
+++ b/Apple_store/styles/style.css
@@ -369,14 +369,16 @@ img {
 .products .box-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
+  padding: 0 5rem;
 }
 .products .box-container .content {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 1rem 1rem 2rem 1rem;
 }
 .products .box-container .content .box {
   padding-top: 3rem;
@@ -384,7 +386,6 @@ img {
 .products .box-container .content h3 {
   font-size: 3rem;
   font-weight: 500;
-  padding-bottom: 1rem;
 }
 .products .box-container .content span {
   font-size: 1.4rem;
