Changing's on mac page

--- a/Apple_store/styles/style.css
+++ b/Apple_store/styles/style.css
@@ -369,7 +369,7 @@ img {
 .products .box-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   padding: 0 5rem;
 }
@@ -427,18 +427,13 @@ img {
   font-weight: 500;
 }
 .products .box-container .box {
-  min-height: 80vh;
+  min-height: 20vh;
   width: 220px;
   height: 140px;
 }
-.products .box-container .box .image {
-  padding: 0 4rem;
-  width: 250px;
-  height: 190px;
-}
-.products .box-container .box .image img {
-  height: 100%;
-  width: 100%;
+.products .box-container .box img {
+  width: 230px;
+  height: 220px;
 }
 
 .home {
