--- a/Apple_store/partials/_text-image.scss
+++ b/Apple_store/partials/_text-image.scss
@@ -99,6 +99,7 @@
   padding: 2rem;
   border-radius: 2rem;
 }
+
 // Gallery
 .gallery .box-container {
   columns: 2 40rem;
@@ -113,4 +114,115 @@
       margin-bottom: 0.8rem;
     }
   }
+}
+
+// Gallery image mac info
+
+.gallery-mac .box-container-mac {
+  margin-top: 2rem;
+  columns: 2 40rem;
+  column-gap: 1.5rem;
+
+  .box-gallery-mac {
+    margin-bottom: 0.8rem;
+    break-inside: avoid;
+
+    img {
+      width: 100%;
+      height: 40vh;
+      margin-bottom: 0.8rem;
+    }
+  }
+}
+
+// Mac page big center image
+
+.gallery-center-image 
+.box-container-center-image {
+  margin-top: 2rem;
+  columns: 1 80rem;
+  column-gap: 1.5rem;
+
+  .box-gallery-center-image {
+    margin-bottom: 0.8rem;
+    break-inside: avoid;
+
+    img {
+      width: 100vw;
+      height: 70vh;
+      margin-bottom: 0.8rem;
+    }
+  }
+}
+
+
+// Mac page long image bottom
+
+.gallery-long-image 
+.box-container-long-image {
+  margin-top: 2rem;
+  columns: 1 80rem;
+  column-gap: 1.5rem;
+
+  .box-gallery-long-image {
+    margin-bottom: 0.8rem;
+    break-inside: avoid;
+
+    img {
+      width: 90vw;
+      height: 35vh;
+      margin-bottom: 0.8rem;
+    }
+  }
+}
+
+
+// Information boxes mac page
+.mac_info-box{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 3rem;
+
+  .mac-info{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 5rem;
+
+    .fa-box-open, 
+    .fa-comments{
+      font-size: 5em;
+      margin-bottom: 2rem;
+    }
+
+    h4{
+      font-size: 2.5rem;
+      font-weight: 400;
+      margin-bottom: .5rem;
+      padding: 0 4rem;
+    }
+
+    p{
+      font-size: 2rem;
+      font-weight: 300;
+      margin-bottom: 1rem;
+      padding: 0 5rem;
+    }
+
+    .link-info{
+      list-style: none;
+      font-size: 2rem;
+      font-weight: 300;
+      margin-bottom: 1rem;
+      padding: 0 5rem;
+    }
+  }
+}
+
+.big_text{
+  font-size: 3.5rem;
+  font-weight: 800;
+  margin: 8rem 0 5rem;
 }
