--- a/Apple_store/styles/style.css
+++ b/Apple_store/styles/style.css
@@ -776,6 +776,104 @@ textarea {
   margin-bottom: 0.8rem;
 }
 
+.gallery-mac .box-container-mac {
+  margin-top: 2rem;
+  -moz-columns: 2 40rem;
+       columns: 2 40rem;
+  -moz-column-gap: 1.5rem;
+       column-gap: 1.5rem;
+}
+.gallery-mac .box-container-mac .box-gallery-mac {
+  margin-bottom: 0.8rem;
+  -moz-column-break-inside: avoid;
+       break-inside: avoid;
+}
+.gallery-mac .box-container-mac .box-gallery-mac img {
+  width: 100%;
+  height: 40vh;
+  margin-bottom: 0.8rem;
+}
+
+.gallery-center-image .box-container-center-image {
+  margin-top: 2rem;
+  -moz-columns: 1 80rem;
+       columns: 1 80rem;
+  -moz-column-gap: 1.5rem;
+       column-gap: 1.5rem;
+}
+.gallery-center-image .box-container-center-image .box-gallery-center-image {
+  margin-bottom: 0.8rem;
+  -moz-column-break-inside: avoid;
+       break-inside: avoid;
+}
+.gallery-center-image .box-container-center-image .box-gallery-center-image img {
+  width: 100vw;
+  height: 70vh;
+  margin-bottom: 0.8rem;
+}
+
+.gallery-long-image .box-container-long-image {
+  margin-top: 2rem;
+  -moz-columns: 1 80rem;
+       columns: 1 80rem;
+  -moz-column-gap: 1.5rem;
+       column-gap: 1.5rem;
+}
+.gallery-long-image .box-container-long-image .box-gallery-long-image {
+  margin-bottom: 0.8rem;
+  -moz-column-break-inside: avoid;
+       break-inside: avoid;
+}
+.gallery-long-image .box-container-long-image .box-gallery-long-image img {
+  width: 90vw;
+  height: 35vh;
+  margin-bottom: 0.8rem;
+}
+
+.mac_info-box {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 3rem;
+}
+.mac_info-box .mac-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 5rem;
+}
+.mac_info-box .mac-info .fa-box-open,
+.mac_info-box .mac-info .fa-comments {
+  font-size: 5em;
+  margin-bottom: 2rem;
+}
+.mac_info-box .mac-info h4 {
+  font-size: 2.5rem;
+  font-weight: 400;
+  margin-bottom: 0.5rem;
+  padding: 0 4rem;
+}
+.mac_info-box .mac-info p {
+  font-size: 2rem;
+  font-weight: 300;
+  margin-bottom: 1rem;
+  padding: 0 5rem;
+}
+.mac_info-box .mac-info .link-info {
+  list-style: none;
+  font-size: 2rem;
+  font-weight: 300;
+  margin-bottom: 1rem;
+  padding: 0 5rem;
+}
+
+.big_text {
+  font-size: 3.5rem;
+  font-weight: 800;
+  margin: 8rem 0 5rem;
+}
+
 section {
   text-align: center;
   padding: 1rem 1rem;
@@ -801,34 +899,6 @@ section .box-gallery ul li a {
   padding-top: 5rem;
   border-bottom: 1px solid #d2d2d7;
   width: 80%;
-}
-
-.border_two {
-  padding-top: 5rem;
-  margin: 0 40vw 3rem;
-  border-bottom: 2px solid rgb(212, 175, 55);
-}
-
-.border_three {
-  padding: 0;
-  margin: 0 40vw 3rem;
-  border-bottom: 2px solid rgb(212, 175, 55);
-}
-
-.btn {
-  font-size: 2.5rem;
-  font-weight: 500;
-  margin-top: 2rem;
-  padding: 0.7rem 1rem;
-  border-radius: 8px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid rgb(212, 175, 55);
-  cursor: pointer;
-  color: rgb(212, 175, 55);
-}
-.btn:hover {
-  color: white;
-  border: 2px solid white;
 }
 
 p {
