--- a/Apple_store/partials/_cards.scss
+++ b/Apple_store/partials/_cards.scss
@@ -1,18 +1,19 @@
 // Destinations
-.heading {
-  text-align: center;
-  margin: 5rem;
+// .heading {
+//   text-align: center;
+//   margin: 5rem;
 
-  span {
-    color: $gold-color;
-    font-size: 2rem;
-  }
+//   span {
+//     color: $gold-color;
+//     font-size: 2rem;
+//   }
 
-  h2 {
-    font-size: 4rem;
-    color: $brown;
-  }
-}
+//   h2 {
+//     font-size: 4rem;
+//     color: $brown;
+//   }
+// }
+
 /// Boxes ///
 #products{
     min-height: 150vh;
