--- a/Apple_store/partials/_headings.scss
+++ b/Apple_store/partials/_headings.scss
@@ -1,5 +1,5 @@
 .home {
-  margin-top: 3rem;
+  margin-top: 8rem;
   background: url(/apple_store/images/home_images/h1.png) no-repeat;
   background-size: cover;
   background-position: center;
@@ -9,13 +9,18 @@
   justify-content: center;
 
   .content {
-    min-width: 30vh;
+    margin-top: -80rem;
     display: flex;
-    margin-top: -50rem;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 3rem;
+    padding: 0rem 3rem;
+
+    p{
+      margin-top: -4rem;
+      font-size: 2.5rem;
+      margin-bottom: 3.5rem;
+    }
 
     ul li {
       list-style: none;
@@ -28,22 +33,6 @@
         color: #06c;
         letter-spacing: inherit;
       }
-    }
-
-    .logo {
-      padding: 0.2rem;
-      font-size: 5rem;
-      font-weight: 700;
-      color: $gold-color;
-      text-decoration: none;
-
-      @media (min-width: 297.98px) and (max-width: 625px) {
-        font-size: 3rem;
-      }
-    }
-
-    .headerlogo {
-      font-family: $fonts-logo;
     }
   }
 }
@@ -54,21 +43,23 @@
   background-size: cover;
   background-position: center;
   display: flex;
-  min-height: 60vh;
+  height: 60vh;
+  min-width: 30vw;
   align-items: center;
   justify-content: center;
 
+  
   .content {
     margin-top: 150px;
     padding-left: 365px;
     display: flex;
     flex-direction: row;
     justify-content: center;
-
+    
     ul li {
       list-style: none;
       display: inline;
-
+      
       a {
         padding: 1.5rem;
         margin-bottom: 5rem;
@@ -78,13 +69,11 @@
       }
     }
   }
-
-  @media (min-width: 297.98px) and (max-width: 767.98px) {
-    padding: 3rem 1rem;
-    .s1 {
-      font-size: 5vw;
-      margin: 3rem;
-    }
+}
+@media (min-width: 297.98px) and (max-width: 767.98px) {
+  .ipad {
+    height: 10vh;
+    min-width: 20vw;
   }
 }
 
@@ -116,13 +105,13 @@
     }
   }
 
-  @media (min-width: 297.98px) and (max-width: 767.98px) {
-    padding: 3rem 1rem;
-    .s1 {
-      font-size: 5vw;
-      margin: 3rem;
-    }
-  }
+  // @media (min-width: 297.98px) and (max-width: 767.98px) {
+  //   padding: 3rem 1rem;
+  //   .s1 {
+  //     font-size: 5vw;
+  //     margin: 3rem;
+  //   }
+  // }
 }
 
 // Mac home img
