--- a/Apple_store/partials/_text-image.scss
+++ b/Apple_store/partials/_text-image.scss
@@ -19,52 +19,19 @@
     flex: 1 1 42rem;
     margin-bottom: 5rem;
 
-    span {
-      color: $gold-color;
-      font-size: 2rem;
-    }
-    @media (min-width: 297.98px) and (max-width: 767.98px) {
-      .price {
-        display: block;
-        margin: 2rem;
-        font-size: 1.5rem;
-      }
-    }
-    @media (min-width: 767.98px) and (max-width: 1046.98px) {
-      .price {
-        font-size: 1.6rem;
-      }
-    }
-
-    h2 {
-      color: $brown;
-      font-size: 4rem;
-      margin-top: 0.5rem;
-    }
-
-    p {
-      padding: 1rem 0;
-      margin-bottom: 1.5rem;
-      color: $brown;
-      font-size: 1.5rem;
-      font-weight: 400;
-    }
-
-    a.btn {
-      font-size: 1.5rem;
-      font-weight: 500;
-      padding: 0.5rem 1rem;
-      border-radius: 8px;
-      background-color: rgba(0, 0, 0, 0.1);
-      border: 2px solid $gold-color;
-      cursor: pointer;
-      color: $gold-color;
-
-      &:hover {
-        color: $brown;
-        border: 2px solid white;
-      }
-    }
+    
+    // @media (min-width: 297.98px) and (max-width: 767.98px) {
+    //   .price {
+    //     display: block;
+    //     margin: 2rem;
+    //     font-size: 1.5rem;
+    //   }
+    // }
+    // @media (min-width: 767.98px) and (max-width: 1046.98px) {
+    //   .price {
+    //     font-size: 1.6rem;
+    //   }
+    // }
 
     .price {
       margin-left: 0;
@@ -72,32 +39,6 @@
       text-decoration: underline;
     }
   }
-}
-
-.content-border-right {
-  border-top: 5px solid rgb(212, 175, 55);
-  border-right: 5px solid rgb(212, 175, 55);
-  padding: 2rem;
-  border-radius: 2rem;
-}
-.content-border-left {
-  border-top: 5px solid rgb(212, 175, 55);
-  border-left: 5px solid rgb(212, 175, 55);
-  padding: 2rem;
-  border-radius: 2rem;
-}
-
-.content-border-bottom-left {
-  border-left: 5px solid rgb(212, 175, 55);
-  border-bottom: 5px solid rgb(212, 175, 55);
-  padding: 2rem;
-  border-radius: 2rem;
-}
-.content-border-bottom-right {
-  border-right: 5px solid rgb(212, 175, 55);
-  border-bottom: 5px solid rgb(212, 175, 55);
-  padding: 2rem;
-  border-radius: 2rem;
 }
 
 // Gallery
@@ -119,8 +60,14 @@
 // Gallery image mac info
 
 .gallery-mac .box-container-mac {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-left: 2rem;
+  margin-right: 2rem;
   margin-top: 2rem;
-  columns: 2 40rem;
+  
   column-gap: 1.5rem;
 
   .box-gallery-mac {
@@ -128,8 +75,8 @@
     break-inside: avoid;
 
     img {
-      width: 100%;
-      height: 40vh;
+      width: 45vw;
+      height: 50vh;
       margin-bottom: 0.8rem;
     }
   }
@@ -223,6 +170,12 @@
 
 .big_text{
   font-size: 3.5rem;
+  font-weight: 800;
+  margin: 8rem 0 5rem;
+}
+
+.big_text_xl{
+  font-size: 5.5rem;
   font-weight: 800;
   margin: 8rem 0 5rem;
 }
