--- a/Apple_store/styles/style.css
+++ b/Apple_store/styles/style.css
@@ -349,19 +349,6 @@ img {
   }
 }
 */
-.heading {
-  text-align: center;
-  margin: 5rem;
-}
-.heading span {
-  color: rgb(212, 175, 55);
-  font-size: 2rem;
-}
-.heading h2 {
-  font-size: 4rem;
-  color: rgb(55, 20, 1);
-}
-
 #products {
   min-height: 150vh;
 }
@@ -437,7 +424,7 @@ img {
 }
 
 .home {
-  margin-top: 3rem;
+  margin-top: 8rem;
   background: url(/apple_store/images/home_images/h1.png) no-repeat;
   background-size: cover;
   background-position: center;
@@ -447,13 +434,17 @@ img {
   justify-content: center;
 }
 .home .content {
-  min-width: 30vh;
+  margin-top: -80rem;
   display: flex;
-  margin-top: -50rem;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 3rem;
+  padding: 0rem 3rem;
+}
+.home .content p {
+  margin-top: -4rem;
+  font-size: 2.5rem;
+  margin-bottom: 3.5rem;
 }
 .home .content ul li {
   list-style: none;
@@ -466,28 +457,14 @@ img {
   color: #06c;
   letter-spacing: inherit;
 }
-.home .content .logo {
-  padding: 0.2rem;
-  font-size: 5rem;
-  font-weight: 700;
-  color: rgb(212, 175, 55);
-  text-decoration: none;
-}
-@media (min-width: 297.98px) and (max-width: 625px) {
-  .home .content .logo {
-    font-size: 3rem;
-  }
-}
-.home .content .headerlogo {
-  font-family: "Montserrat", "Poppins", sans-serif;
-}
 
 .ipad {
   background: url(/apple_store/images/home_images/h2.png) no-repeat;
   background-size: cover;
   background-position: center;
   display: flex;
-  min-height: 60vh;
+  height: 60vh;
+  min-width: 30vw;
   align-items: center;
   justify-content: center;
 }
@@ -509,16 +486,13 @@ img {
   color: #06c;
   letter-spacing: inherit;
 }
+
 @media (min-width: 297.98px) and (max-width: 767.98px) {
   .ipad {
-    padding: 3rem 1rem;
-  }
-  .ipad .s1 {
-    font-size: 5vw;
-    margin: 3rem;
+    height: 10vh;
+    min-width: 20vw;
   }
 }
-
 .presentcard {
   background: url(/apple_store/images/home_images/h3.png) no-repeat;
   background-size: cover;
@@ -542,15 +516,6 @@ img {
   font-size: 2rem;
   color: #06c;
   letter-spacing: inherit;
-}
-@media (min-width: 297.98px) and (max-width: 767.98px) {
-  .presentcard {
-    padding: 3rem 1rem;
-  }
-  .presentcard .s1 {
-    font-size: 5vw;
-    margin: 3rem;
-  }
 }
 
 .home_mac {
@@ -684,80 +649,10 @@ textarea {
   flex: 1 1 42rem;
   margin-bottom: 5rem;
 }
-.about .content span {
-  color: rgb(212, 175, 55);
-  font-size: 2rem;
-}
-@media (min-width: 297.98px) and (max-width: 767.98px) {
-  .about .content .price {
-    display: block;
-    margin: 2rem;
-    font-size: 1.5rem;
-  }
-}
-@media (min-width: 767.98px) and (max-width: 1046.98px) {
-  .about .content .price {
-    font-size: 1.6rem;
-  }
-}
-.about .content h2 {
-  color: rgb(55, 20, 1);
-  font-size: 4rem;
-  margin-top: 0.5rem;
-}
-.about .content p {
-  padding: 1rem 0;
-  margin-bottom: 1.5rem;
-  color: rgb(55, 20, 1);
-  font-size: 1.5rem;
-  font-weight: 400;
-}
-.about .content a.btn {
-  font-size: 1.5rem;
-  font-weight: 500;
-  padding: 0.5rem 1rem;
-  border-radius: 8px;
-  background-color: rgba(0, 0, 0, 0.1);
-  border: 2px solid rgb(212, 175, 55);
-  cursor: pointer;
-  color: rgb(212, 175, 55);
-}
-.about .content a.btn:hover {
-  color: rgb(55, 20, 1);
-  border: 2px solid white;
-}
 .about .content .price {
   margin-left: 0;
   font-weight: 600;
   text-decoration: underline;
-}
-
-.content-border-right {
-  border-top: 5px solid rgb(212, 175, 55);
-  border-right: 5px solid rgb(212, 175, 55);
-  padding: 2rem;
-  border-radius: 2rem;
-}
-
-.content-border-left {
-  border-top: 5px solid rgb(212, 175, 55);
-  border-left: 5px solid rgb(212, 175, 55);
-  padding: 2rem;
-  border-radius: 2rem;
-}
-
-.content-border-bottom-left {
-  border-left: 5px solid rgb(212, 175, 55);
-  border-bottom: 5px solid rgb(212, 175, 55);
-  padding: 2rem;
-  border-radius: 2rem;
-}
-
-.content-border-bottom-right {
-  border-right: 5px solid rgb(212, 175, 55);
-  border-bottom: 5px solid rgb(212, 175, 55);
-  padding: 2rem;
-  border-radius: 2rem;
 }
 
 .gallery .box-container {
@@ -777,9 +672,13 @@ textarea {
 }
 
 .gallery-mac .box-container-mac {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-left: 2rem;
+  margin-right: 2rem;
   margin-top: 2rem;
-  -moz-columns: 2 40rem;
-       columns: 2 40rem;
   -moz-column-gap: 1.5rem;
        column-gap: 1.5rem;
 }
@@ -789,8 +688,8 @@ textarea {
        break-inside: avoid;
 }
 .gallery-mac .box-container-mac .box-gallery-mac img {
-  width: 100%;
-  height: 40vh;
+  width: 45vw;
+  height: 50vh;
   margin-bottom: 0.8rem;
 }
 
@@ -874,6 +773,12 @@ textarea {
   margin: 8rem 0 5rem;
 }
 
+.big_text_xl {
+  font-size: 5.5rem;
+  font-weight: 800;
+  margin: 8rem 0 5rem;
+}
+
 section {
   text-align: center;
   padding: 1rem 1rem;
@@ -899,17 +804,6 @@ section .box-gallery ul li a {
   padding-top: 5rem;
   border-bottom: 1px solid #d2d2d7;
   width: 80%;
-}
-
-p {
-  color: rgb(55, 20, 1);
-}
-
-.p-booking {
-  padding-top: 5rem;
-  color: rgb(255, 255, 255);
-  font-size: 2vw;
-  font-weight: 600;
 }
 
 * {
