--- a/Apple_store/styles/style.scss
+++ b/Apple_store/styles/style.scss
@@ -14,6 +14,7 @@
 @import '../partials/headings';
 @import '../partials/text-image';
 @import '../partials/small-stylings';
+@import '../partials/table';
 
 * {
   box-sizing: border-box;
