--- a/Apple_store/partials/_headings.scss
+++ b/Apple_store/partials/_headings.scss
@@ -16,7 +16,7 @@
     align-items: center;
     padding: 0rem 3rem;
 
-    p{
+    p {
       margin-top: -4rem;
       font-size: 2.5rem;
       margin-bottom: 3.5rem;
@@ -65,7 +65,6 @@
       }
     }
   }
-
 }
 
 // Home page Ipad
@@ -79,18 +78,17 @@
   align-items: center;
   justify-content: center;
 
-  
   .content_right {
     margin-top: 10rem;
     padding-left: 365px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    
+
     ul li {
       list-style: none;
       display: inline;
-      
+
       a {
         padding: 1.5rem;
         margin-bottom: 5rem;
@@ -108,6 +106,7 @@
   column-gap: 1.5rem;
 
   .box-gallery {
+    position: relative;
     margin-bottom: 0.8rem;
     break-inside: avoid;
 
@@ -206,7 +205,7 @@
   align-items: center;
   justify-content: center;
   margin-top: 7rem;
-  
+
   .content {
     min-width: 30vh;
     display: flex;
@@ -216,11 +215,11 @@
     justify-content: center;
     align-items: center;
     padding: 3rem;
-    
+
     ul li {
       list-style: none;
       display: inline;
-      
+
       a {
         padding: 1.5rem;
         margin-bottom: 5rem;
@@ -230,7 +229,7 @@
       }
     }
   }
-  
+
   @media (min-width: 297.98px) and (max-width: 767.98px) {
     padding: 3rem 10rem;
   }
@@ -245,29 +244,28 @@
   min-height: 60vh;
   align-items: center;
   justify-content: center;
-  
+
   .content {
     margin-top: -5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+
     ul li {
       list-style: none;
       display: inline;
-      
+
       a {
-        
         font-size: 2rem;
         color: #06c;
         letter-spacing: inherit;
       }
     }
   }
-  
+
   @media (min-width: 297.98px) and (max-width: 767.98px) {
     padding: 3rem 1rem;
-    
+
     .s1 {
       font-size: 5vw;
       margin: 3rem;
@@ -336,7 +334,6 @@
       display: inline;
 
       a {
-
         font-size: 2rem;
         color: #06c;
         letter-spacing: inherit;
