--- a/Apple_store/partials/_headings.scss
+++ b/Apple_store/partials/_headings.scss
@@ -271,6 +271,16 @@
   }
 }
 
+//Ipad text
+.ipad_text {
+  font-size: 5rem;
+}
+
+//Info ipad text
+.info_ipad {
+  font-weight: 700;
+}
+
 // About presentcard iPad
 // .presentcard_ipad {
 //   background: url(/Apple_store/images/ipad_images/i3.png) no-repeat;
